syntax = "proto3";

package org.rococo.grpc;

option java_multiple_files = true;
option java_package = "org.rococo.grpc";
option java_outer_classname = "RococoUserdataProto";

service RococoUserdataService {
  rpc GetCurrent (UsernameRequest) returns (UserResponse) {}
  rpc UpdateUser (UserRequest) returns (UserResponse) {}
}

message UsernameRequest {
  string username = 1;
}

message UserRequest {
  User user = 1;
}

message UserResponse {
  User user = 1;
}

message User {
  string id = 1;
  string username = 2;
  string firstname = 3;
  string lastname = 4;
  string avatar = 5;
}
